--- a/podcast.html
+++ b/podcast.html
@@ -59,6 +59,12 @@ team:
       role: Cover Design
       position: 
       current:
+    - name: Yu-An Chen
+      ch-name: 
+      image-url: /assets/img/committee/yu-anchen.jpg
+      role: Website Design
+      position: 
+      current:
 
 summary: The main goal of the Advanced Podcast series is to expose Taiwanese-American biotech professionals to a variety of career opportunities and possibilities in biotech/pharmaceutical corporates for career advancement and development, and to encourage the younger generations of Taiwanese international students and postdocs the exchange of ideas for career planning and potentials.
 ---
