Add new event photo to home slide show

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@ active: home
 layout: default
 
 carousel-items:
+    - img-url: assets/img/home_slides/2021-welcome-group.jpg
+      text: 2021 Welcoming Party
+    - img-url: assets/img/home_slides/2021-holiday-party.jpg
+      text: 2021 Holiday Party & Operation Warp Speed Talk
     - img-url: assets/img/home_slides/symposium2019-IMG_0714.jpg
       text: 2019 Symposium
     - img-url: assets/img/home_slides/symposium2019-IMG_0927.jpg
