--- a/committee.html
+++ b/committee.html
@@ -96,6 +96,7 @@ leaderships:
           position: Postdoctoral Fellow at Harvard Medical School
           current: Principal Investigator at Academia Sinica, Taiwan
 ---
+
 <div class="row align-items-center py-auto my-auto py-md-5 my-md-5">
     <div class="col-12 col-md col-lg-5">
         <h1 class="display-1">
@@ -112,7 +113,49 @@ leaderships:
 </div>
 
 <hr class="mt-5 mb-4" />
-
+<ul class="nav" role="tablist">
+    <li class="nav-item">
+        <a class="nav-link active" data-toggle="tab" href="#link1" role="tablist" aria-expanded="true">
+            2022
+        </a>
+    </li>
+</ul>
+<div class="tab-content tab-space">
+    <div class="tab-pane active" id="link1" aria-expanded="true">
+        <div class="row">
+            {% for row in site.data.committee.2022 %}
+            <div class="col-6 col-md-4 col-lg-3 p-3 p-lg-4 mb-2">
+                <div class="col-12 col-xl-10">
+                    <img src="{{ "/assets/img/committee/" | append: row['Headshot Name'] | absolute_url }}" class="img-fluid w-100 rounded-circle" alt="">
+                </div>
+                <div class="d-flex mt-4">
+                    <div>
+                        <h4 class="mb-0">
+                            <strong>{{ row['Name in English'] }}</strong>
+                        </h4>
+                        <p>{{ row['Position title on the website'] }}</p>
+                    </div>
+                    <div class="flex-grow-1 align-self-center ml-2">
+                        <button class="btn btn-neutral btn-fab btn-icon btn-round m-0">
+                            <a href="{{ row.LinkedIn }}" target="_blank">
+                                <img src="{{ "/assets/img/linkedin_logo.svg" | absolute_url }}" class="rounded-0 pl-1" style="height: 1rem;" alt="">
+                            </a>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+    <div class="tab-pane" id="link2" aria-expanded="false">
+      Efficiently unleash cross-media information without cross-media value. Quickly maximize timely deliverables for real-time schemas.
+      <br><br>Dramatically maintain clicks-and-mortar solutions without functional solutions.
+    </div>
+    <div class="tab-pane" id="link3" aria-expanded="false">
+        Completely synergize resource taxing relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas.
+        <br><br>Dynamically innovate resource-leveling customer service for state of the art customer service.
+    </div>
+</div>
 {% for item in page.leaderships %}
     <h2 class="mt-5 mb-3">{{ item[0] | capitalize }}</h2>
         <div class="row">
