Add image for social media and add page title

--- a/podcast.html
+++ b/podcast.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: Podcast
 about-podcast: |
     生技來一刻是由 Boston Taiwanese Biotechnology Association （BTBA）發行，Taipei Economic and Cultural Office (TECO) in Boston 贊助。旨在分享在美台灣生技人於職涯上的經歷和創見，盼透過和已在美國各地生技產業就業的學長姐的連線訪談，帶給即將入門生技行業的學子一個方向，提攜後進，並加強台美生技人之間彼此的連結，教學相長。
 
