Update podcast guests yaml format

--- a/podcast/index.html
+++ b/podcast/index.html
@@ -124,18 +124,13 @@ summary: The main goal of the Advanced Podcast series is to expose Taiwanese-Ame
             <!-- {{ episode.embed }} -->
             <div class="row w-100">
                 <div class="col-auto mr-auto pt-1">
+                    {% for guest in episode.guests %}
                     <p>
-                        <a href="{{ episode.podcast_guest1_linkedin }}">
-                            ⇨ {{ episode.podcast_guest1 }}'s LinkedIn
+                        <a href="{{ guest.linkedin }}">
+                            ⇨ {{ guest.name }}'s LinkedIn
                         </a>
                     </p>
-                    {% if episode.podcast_guest2 %}
-                    <p>
-                        <a href="{{ episode.podcast_guest2_linkedin }}">
-                            ⇨ {{ episode.podcast_guest2 }}'s LinkedIn
-                        </a>
-                    </p>
-                    {% endif %}
+                    {% endfor %}
                 </div>
                 <div>
                     <div class="text-right">
