--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 carousel-items:
     - img-url: assets/img/home_slides/2021-welcome-group.jpg
-      text: 2021 Welcoming Part
+      text: 2021 Welcoming Party
     - img-url: assets/img/home_slides/2021-holiday-party.jpg
       text: 2021 Holiday Party & Operation Warp Speed Talk
     - img-url: assets/img/home_slides/symposium2019-IMG_0714.jpg
