--- a/committee.html
+++ b/committee.html
@@ -23,7 +23,7 @@ title: Committee
 <h2>Meet Our Team of Year</h2>
 
 <ul class="nav" role="tablist">
-    {% assign years = "2023, 2022, 2021, 2020, 2019, 2018, 2017, 2016, 2015, 2014, 2013" | split: ", " %}
+    {% assign years = "2024, 2023, 2022, 2021, 2020, 2019, 2018, 2017, 2016, 2015, 2014, 2013" | split: ", " %}
     {% for year in years %}
     <li class="nav-item">
         <a class="nav-link {% if forloop.first == true %}active{% endif %}" data-toggle="tab" href="#{{ year }}" role="tablist" aria-expanded="{% if forloop.first == true %}true{% else %}false{% endif %}">
